# universal_simulator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .vast_onstart_sota.sh  ABLATION_CONFIGS_TTC_FIXES.md  ARM_CRITICAL_ISSUES_ANALYSIS.md  ARM_FIXES_SUMMARY.md  CLAUDE.md  DEPRECATED.md  DIFFUSION_ABLATION_RESULTS.md  DIFFUSION_INVESTIGATION_INDEX.md  DIFFUSION_LOSS_INVESTIGATION.md  DIFFUSION_LOSS_SUMMARY.md  DIFFUSION_TECHNICAL_REFERENCE.md  DOCKER_USAGE.md  Dockerfile  Dockerfile.prod  ENCODER_RESEARCH_INDEX.md  ENCODER_RESEARCH_REPORT.md  FINDINGS_INDEX.md  FIXES_IMPLEMENTED.md  FIXES_SUMMARY.md  LATENT_OPERATOR_ARCHITECTURE.md  LATENT_OPERATOR_DOCUMENTATION_INDEX.md  LATENT_OPERATOR_QUICK_REFERENCE.md  LATENT_SPACE_ARCHITECTURE.md  LATENT_SPACE_DOCUMENTATION_INDEX.md  LATENT_SPACE_QUICK_REFERENCE.md  MULTI_STAGE_TRAINING.md  MULTI_STAGE_TRAINING_INDEX.md  MULTI_STAGE_TRAINING_SUMMARY.md  Makefile  OSCILLATION_FIX_SUMMARY.md  PARALLEL_CACHE_QUICKSTART.md  PERFORMANCE_ANALYSIS_AND_RECOMMENDATIONS.md  PIPELINE_STREAMLINING_SUMMARY.md  PRODUCTION_INFRASTRUCTURE_PROGRESS.md  PRODUCTION_WORKFLOW.md  PYTORCH_PATTERNS.md  PYTORCH_PATTERNS_INDEX.md  (+54 more)
.claude/: settings.json
UPT_docs/: PDEBench_task_coverage.md  README.txt  UPT_Arch_Train_Scaling.md  UPT_GRADIENT_FIX_IMPLEMENTATION.md  UPT_INTEGRATION_ANALYSIS.md  UPT_Implementation_Plan.md  upt_large.yaml  upt_medium.yaml  upt_small.yaml
archive/: README.md
configs/: OSCILLATION_FIX_QUICK_REF.md  README.md  ablation_upt_128tokens.yaml  ablation_upt_128tokens_fixed.yaml  ablation_upt_256tokens.yaml  ablation_upt_256tokens_fixed.yaml  ablation_upt_64tokens.yaml  ablation_upt_64tokens_fixed.yaml  benchmark_pdebench.yaml  cache_precompute_defaults.yaml  coupled_toy.yaml  defaults.yaml  dry_run_test.yaml  eval_2task_advection_darcy_baseline.yaml  eval_2task_advection_darcy_ttc_lite.yaml  eval_2task_baseline.yaml  eval_2task_ttc.yaml  eval_burgers_32dim.yaml  eval_burgers_32dim_ttc.yaml  eval_burgers_32dim_v3_hjnqclgk.yaml  eval_burgers_512dim.yaml  eval_burgers_512dim_test_baseline.yaml  eval_burgers_512dim_ttc_test.yaml  eval_burgers_512dim_ttc_val.yaml  eval_burgers_arm_fixed.yaml  eval_pdebench.yaml  eval_pdebench_advection_scale.yaml  eval_pdebench_scale.yaml  eval_pdebench_scale_test.yaml  (+91 more)
(+396 files in other folders)
