[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-physics-stack"
version = "0.0.1"
description = "Universal Physics Stack – unified latent simulator with a transformer core, any-point decoding, and physics guards"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Universal Physics Stack Devs"}]
dependencies = [
  "torch>=2.5",
  "torchvision>=0.20,<0.21",  # Pin compatible with PyTorch 2.5+
  "triton>=2.1",
  # NOTE: flash-muon must be installed from GitHub (not on PyPI)
  # git clone https://github.com/nil0x9/flash-muon.git && pip install -e ./
  # If not available, will fall back to torch.optim.Muon
  "torchmetrics>=1.0,<2.0",  # Pin to avoid incompatible versions
  "einops>=0.7",
  "xarray>=2023.1",
  "zarr>=2.16",
  "h5py>=3.9",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "mlflow>=2.13",
  "wandb>=0.17",
  "trimesh>=4.0",
  "pykeops>=2.2",
  "pyvista>=0.43",
  "pyarrow>=14.0",
  "netCDF4>=1.6",
  "sympy>=1.12",
  "pysr>=0.18",
  "pysindy>=1.8",
  "scipy>=1.11",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "pytorch-lightning>=2.4,<3.0",
  "lightning>=2.4,<3.0",  # Ensure lightning-fabric is compatible
  "torchao>=0.5.0",  # CPU offload optimizer (Phase 5)
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-xdist>=3.3",
  "ruff>=0.5",
  "black>=24.3",
  "isort>=5.12",
  "mypy>=1.6",
  "types-PyYAML",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ups*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
force_grid_wrap = 0
include_trailing_comma = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
  "E", "F", "I", "UP", "B", "N", "A",
]
ignore = []
exclude = ["build", "dist", ".venv", "data", "export"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests/unit", "tests/integration"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "gpu: marks tests as requiring GPU (deselect with '-m \"not gpu\"')",
]
